# aisysprojserver

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  _test.py  mypy.ini  optional-requirements.txt  otelcol-config.yaml  prometheus.yml  pyproject.toml  requirements.txt  uwsgi.ini
aisysprojserver/: act.py  active_env.py  active_env_management.py  admin.py  agent_account.py  agent_account_management.py  agent_data.py  app.py  authentication.py  config.py  env_interface.py  env_mixins.py  env_settings.py  group.py  group_management.py  json_util.py  models.py  plugins.py  run.py  runwrapper.py  telemetry.py  util.py  uwsgi_main.py  website.py
aisysprojserver/static/: base.css
aisysprojserver/static/simplecss/: README.md
aisysprojserver/templates/: agent_without_runs.html  base.html  frontpage.html  group_page.html  plugins_page.html  simple_agent_view.html  simple_env_view.html
aisysprojserver_clienttools/: __main__.py  admin.py  client.py  client_simple.py  client_simple_v0.py  client_simple_v1.py  upload_plugin.py
aisysprojserver_test/: servertestcase.py  test_act.py  test_clients.py  test_plugins.py  test_user_management.py
doc/: requirements.txt
doc/source/: clients.rst  conf.py  contribute.rst  getting_started.rst  index.rst  introduction.rst  new_environment.rst  server_protocol_v0.rst  server_protocol_v1.rst  terminology.rst
example_envs/simple_nim/: environment.py
example_envs/simple_nim/templates/: nim_run.html
